--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,25 @@
 .App-header {
   margin-top: 2em;
+  text-align: center;
+}
+
+.App-header .heading {
+  display: inline-block;
+  margin: 0 0.5em;
+}
+
+.App-main {
+  width: 50%;
+  margin: 0 auto;
+}
+
+.App-footer {
+  text-align: center;
+  margin: 30px 0;
 }
 
 img#dictIcon {
-  display: block;
-  margin: 0 auto;
-  width: 90px;
+  display: inline-block;
+  margin: 0 auto 0.6em;
+  width: 50px;
 }
